[package]
name = "mqtt_temperatures1"
version = "0.1.0"
edition = "2018"
authors = ["Ian Thompson <bulkoboy@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
paho-mqtt = '0.5'
serde_json = "*"
serde = {version = '*', features = ["derive"] }
postgres = { version = '0.19.2', features = ["with-chrono-0_4", "with-time-0_3"]}
chrono = "*"
